<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <string name="is_dengluing">正在登陆...</string>



    <string name="app_name">徐州商城</string>
    <string name="action_settings">Settings</string>
    <string name="demo">测试文字</string>
    <string name="numberone">1</string>
    <string name="demotwo">测试</string>
    <string name="category">类目</string>
    <string name="hello_world">Hello world!</string>
    <string name="mainpage">首页</string>
    <string name="travel">旅游</string>
    <string name="sunfan">晒范</string>
    <string name="mall">商城</string>
    <string name="total">合计:</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="my">我的</string>
    <string name="cq">重庆</string>
    <string name="BaliIsland">巴厘岛</string>
    <string name="searchhint">搜索你想要的宝贝</string>
    <string name="searchcount">请输入账号或手机号码</string>
    <string name="searchaddress">寻找你想要去的地方</string>
    <string name="searchkey">请输入关键词</string>
    <string name="searchallorder">搜索所有订单</string>
    <string name="msg">消息</string>
    <string name="makefriends">交友</string>
    <string name="shoppingcart">购物车</string>
    <string name="feedback">意见与反馈</string>
    <string name="myfeedback">我的意见反馈</string>
    <string name="tt">合计:</string>
    <string name="num">¥0.0</string>
    <string name="gopay">去支付</string>
    <string name="recharge">充值</string>
    <string name="forum">论坛</string>
    <string name="hotel">酒店</string>
    <string name="convenience">便民</string>
    <string name="flatsharereal">合租房</string>
    <string name="activity">活动</string>
    <string name="study">学习</string>
    <string name="integralarea">积分专区</string>
    <string name="integral">积分</string>
    <string name="mymsg">我的信息</string>
    <string name="mymsg1">商品收藏</string>
    <string name="mymsg2">店铺收藏</string>
    <string name="mymsg3">关注品牌</string>
    <string name="mymsg4">我的足迹</string>
    <string name="lastsearch">最近搜索</string>
    <string name="hotsearch">热门搜索</string>
    <string name="num1">1</string>
    <string name="allorder">全部订单</string>
    <string name="checkallorder">查看全部订单</string>
    <string name="allassets">全部资产</string>
    <string name="checkallassets">查看全部资产</string>
    <string name="help">帮助与反馈</string>
    <string name="selfhelp">智能自助服务</string>
    <string name="setting">设置</string>
    <string name="fbstyle">反馈类型</string>
    <string name="receivingaddress">收货地址管理</string>
    <string name="functionopinion">功能意见</string>
    <string name="thesun">晒范</string>
    <string name="fanbase">范库</string>
    <string name="album_all">All Photos</string>
    <string name="hottopic">热卖话题</string>
    <string name="fan">达人范</string>
    <string name="commodity">商品</string>
    <string name="supermarket">超市</string>
    <string name="rechangern">立即充值</string>
    <string name="exchangern">立即兑换</string>
    <string name="domestic">国内/港澳台</string>
    <string name="international">国际</string>
    <string name="destination">目的地</string>
    <string name="intoout">入离店时间</string>
    <string name="mylocation">我的位置</string>
    <string name="hr">热门推荐</string>
    <string name="allone">共一晚</string>
    <string name="keyword">关键词/酒店/地名</string>
    <string name="starprice">星级/价格</string>
    <string name="onlycheck">只查看行用住酒店</string>
    <string name="acttimetext">活动时间:</string>
    <string name="currentintegral">当前积分</string>
    <string name="valueagainst">超值兑</string>
    <string name="vouchers">代金券</string>
    <string name="equal">100积分=10代金券</string>
    <string name="todayagainst">今日必兑</string>
    <string name="tenclock">每天10点开抢</string>
    <string name="hotaskanswer">热门问答</string>
    <string name="allanswer">全部问答</string>
    <string name="ianswer">我来问答</string>
    <string name="send">发送</string>
    <string name="propertydetails">房产详情</string>
    <string name="yuanpermonth">元/月</string>
    <string name="propertymode">(押一付三)</string>
    <string name="livingroom">客厅</string>
    <string name="decorate">装修</string>
    <string name="floor">楼层</string>
    <string name="limit">限制</string>
    <string name="area">面积</string>
    <string name="general">概况</string>
    <string name="bedroom">卧室</string>
    <string name="village">小区</string>
    <string name="locationvillage">定位小区</string>
    <string name="address">地址</string>
    <string name="album">相册</string>
    <string name="propertydescription">房源描述</string>
    <string name="evaluationrecord">评价记录</string>
    <string name="reliable">靠谱</string>
    <string name="satisfied">满意</string>
    <string name="noway">不行</string>
    <string name="bad">差评</string>
    <string name="navigation">导航</string>
    <string name="phone">电话</string>
    <string name="tobepaid">待付款</string>
    <string name="tobeshipped">待发货</string>
    <string name="tobereceive">待收货</string>
    <string name="tobeevaluate">待评价</string>
    <string name="toberefund">退款/售后</string>
    <string name="nocommodity">购物车没有任何商品</string>
    <string name="edit">编辑</string>
    <string name="mf1">账        号:</string>
    <string name="mf2">昵        称:</string>
    <string name="mf3">个        人:</string>
    <string name="mf4">个人格言:</string>
    <string name="mf5">故        乡:</string>
    <string name="mf6">电        话:</string>
    <string name="mf7">邮        箱:</string>
    <string name="mf8">小        区:</string>
    <string name="next">下一步</string>
    <string name="st1">帮助中心</string>
    <string name="st2">检查跟新</string>
    <string name="st3">清除缓存</string>
    <string name="st4">关于我们</string>
    <string name="propertyphone">物业电话</string>
    <string name="myvillage">我的小区</string>
    <string name="dynamic">小区动态</string>
    <string name="receiveads">收货地址</string>
    <string name="icon">头像</string>
    <string name="shipped">卖家待发货</string>
    <string name="transactionamount">交易金额 :</string>
    <string name="refundamount">退款金额 :</string>
    <string name="wallet">钱包</string>
    <string name="currentbalance">当前余额</string>
    <string name="coupons">优惠券</string>
    <string name="search">搜索</string>
    <string name="voucher">代金券</string>
    <string name="collection">收藏</string>
    <string name="customer">客服</string>
    <string name="shop">店铺</string>
    <string name="walletfu">红包</string>
    <string name="cellnum">手机号</string>
    <string name="verificationcode">验证码</string>
    <string name="sendnum">发送验证码</string>
    <string name="confirmpassword">确认密码</string>
    <string name="userservice">用户注册服务协议</string>
    <string name="logon">登录</string>
    <string name="password">密码</string>
    <string name="confirm">确认</string>
    <string name="exitlogon">退出登录</string>
    <string name="account">账号</string>
    <string name="exchange">更换</string>
    <string name="choiceaddress">请选择街道</string>
    <string name="choicevillages">请选择小区</string>
    <string name="nosearch">没有相关搜索商品</string>
    <string name="nonumber">暂无该小区的物业电话</string>
    <string name="nocom">请登录后再查看商品</string>
    <string name="choicestyle">请选择反馈类型</string>
    <string name="advise1">功能意见</string>
    <string name="advise2">页面意见</string>
    <string name="advise3">你的需求</string>
    <string name="advise4">其他意见</string>
    <string name="productadvice">请输入产品意见，我们将不断优化体验</string>
    <string name="phonenumber">请输入您的手机号/或邮箱</string>
    <string name="history">历史</string>
    <string name="areabig">地区</string>
    <string name="addressdetail">街道</string>
    <string name="country">国家地区</string>
    <string name="china">中国大陆+86</string>
    <string name="choicexq">请选择小区</string>
    <string name="inputusername">输入用户名</string>
    <string name="username">用户名</string>
    <string name="forgetpasd">忘记密码</string>
    <string name="register">注册</string>
    <string name="personset">个人信息</string>
    <string name="choicevillage">请选择所在小区</string>
    <string name="actname">活动名称:</string>
    <string name="actrule">活动规则:</string>
    <string name="registrationtime">报名时间:</string>
    <string name="competitiontime">参赛时间:</string>
    <string name="competitionaddress">参赛地点:</string>
    <string name="registrationphone">报名电话:</string>
    <string name="longest">报名需提前电话预约 次日带上本人身份证前往参赛地点填写信息</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>

    
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="get_data_error">获得数据失败，请稍后重试</string>

    <string name="please_wait">"请稍后"</string>
    <string name="is_quite">确定退出？</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="Are_logged_out">退出</string>
    <string name="login_error_one">账号或密码错误</string>
    <string name="network_error">网络连接错误</string>
    <string name="daojishi_one">"倒计时"</string>
    <string name="daojishi_two">"秒"</string>
    <string name="daojishi_three">"重新获取"</string>
    <string name="reg_error_eight">"获得验证码失败"</string>
    <string name="reg_error_one">"验证码不正确"</string>

    <string name="add_cart_success">商品成功加入购物车</string>
    <string name="add_cart_is">商品已经加入购物车</string>
    <string name="zanweiyou">接口暂未有</string>
    <string name="cart_error_one">"请选择商品"</string>
    <string name="qujiesuan">去结算</string>
    <string name="countPrices">￥</string>
    <string name="select_city">请选择城市</string>
    <string name="select_area">请选择地区</string>
    <string name="address_error_one">请输入姓名</string>
    <string name="address_error_two">请输入电话</string>
    <string name="address_error_threee">请输入手机</string>
    <string name="address_error_three">请输入详细地址</string>
    <string name="address_error_four">请选择地址</string>
    <string name="order_error_one">请选择选择商品</string>
    <string name="money">"￥"</string>
    <string name="zhe">"折"</string>
    <string name="xiegang">"/"</string>
    <string name="add_address_error_one">收货人名不能为空</string>
    <string name="add_address_error_two">电话不能为空</string>
    <string name="add_address_error_three">收货地址不能为空</string>
    <string name="add_address_error_four">邮编不能为空</string>
    <string name="zip">邮编:</string>
    <string name="zhinegnxuanzhong">只能选中一条数据进行操作</string>
    <string name="qingxianxuanzeshuyju">请先选中数据</string>
    <string name="shegnchengdingdan">生成订单</string>
    <string name="zhifudiingdan">支付订单</string>
    <string name="quxiaodingdan">取消订单</string>
    <string name="zuoifeidingdan">作废订单</string>
    <string name="wanchegndingdan">完成订单</string>
    <string name="caozuoshibai">操作失败</string>
    <string name="bukaifapiao">不开发票</string>
    <string name="kaifapiao">开发票</string>
    <string name="goods_prices">￥%1$s</string>
    <string name="create_time">下单时间:</string>
    <string name="select_city_address">选择城市</string>
    <string name="select_country">选择地区</string>
    <string name="do_success">操作成功</string>
    <string name="do_fail">操作失败</string>

    <string name="province">省</string>
    <string name="city">市</string>
    <string name="dist">区</string>



</resources>