<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_grey_background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/titlemany" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:contentDescription="@color/transparent"
            android:padding="10dp"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/feedback"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/history"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:text="@string/history"
            android:textColor="@color/common_greylight" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/feedbackclass"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_selector" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/fbstyle" />

        <ImageView
            android:id="@+id/arrow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:contentDescription="@color/transparent"
            android:scaleY="0.9"
            android:src="@drawable/arrowright" />

        <TextView
            android:id="@+id/textadvise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="6dp"
            android:layout_toLeftOf="@id/arrow4"
            android:text="@string/functionopinion"
            android:textColor="@color/common_grey_word"
            android:textSize="12sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/productadvice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:gravity="top"
        android:hint="@string/productadvice"
        android:lines="7"
        android:paddingLeft="10dp"
        android:paddingTop="3dp"
        android:textColorHint="@color/common_greylighttra"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/phonenumber"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:gravity="top"
        android:hint="@string/phonenumber"
        android:inputType="phone"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:textColorHint="@color/common_greylighttra"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/layout_selectorred"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/confirm"
        android:textColor="@color/common_white" />

</LinearLayout>